# local-abbfreeathome

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  release.yml
.github/workflows/: publish-testpypi.yaml  publish.yaml  ruff.yaml  test.yaml
src/abbfreeathome/: __init__.py  api.py  const.py  dev-requirements.txt  device.py  exceptions.py  floorplan.py  freeathome.py
src/abbfreeathome/channels/: air_quality_sensor.py  base.py  blind_sensor.py  brightness_sensor.py  carbon_monoxide_sensor.py  cover_actuator.py  des_door_opener_actuator.py  des_door_ringing_sensor.py  dimming_actuator.py  force_on_off_sensor.py  heating_actuator.py  movement_detector.py  rain_sensor.py  room_temperature_controller.py  smoke_detector.py  switch_actuator.py  switch_sensor.py  temperature_sensor.py  trigger.py  valve_actuator.py  wind_sensor.py  window_door_sensor.py
src/abbfreeathome/channels/virtual/: virtual_brightness_sensor.py  virtual_energy_battery.py  virtual_energy_inverter.py  virtual_energy_two_way_meter.py  virtual_rain_sensor.py  virtual_room_temperature_controller.py  virtual_switch_actuator.py  virtual_temperature_sensor.py  virtual_trigger.py  virtual_wind_sensor.py  virtual_window_door_sensor.py
src/abbfreeathome/devices/: base.py  blind_actuator.py  blind_sensor.py  brightness_sensor.py  carbon_monoxide_sensor.py  cover_actuator.py  des_door_opener_actuator.py  des_door_ringing_sensor.py  dimming_actuator.py  force_on_off_sensor.py  heating_actuator.py  movement_detector.py  rain_sensor.py  real_base.py  room_temperature_controller.py  room_temperature_controller_master_without_fan.py  smoke_detector.py  switch.py  switch_actuator.py  switch_actuator_virtual.py  switch_sensor.py  temperature_sensor.py  trigger.py  wind_sensor.py  window_door_sensor.py  window_door_sensor_virtual.py
src/abbfreeathome/devices/virtual/: virtual_base.py  virtual_brightness_sensor.py  virtual_energy_battery.py  virtual_energy_inverter.py  virtual_energy_two_way_meter.py  virtual_switch_actuator.py  virtual_temperature_sensor.py  virtual_wind_sensor.py  virtual_window_door_sensor.py
tests/: conftest.py  test_air_quality_sensor.py  test_api.py  test_base.py  test_bin.py  test_blind_sensor.py  test_brightness_sensor.py  test_carbon_monoxide_sensor.py  test_cooling_actuator.py  test_cover_actuator.py  test_des_door_opener_actuator.py  test_des_door_ringing_sensor.py  test_device.py  test_device_channel_composition.py  test_dimming_actuator.py  test_exceptions.py  test_floorplan.py  test_force_on_off_sensor.py  test_freeathome.py  test_heating_actuator.py  test_heating_cooling_actuator.py  test_movement_detector.py  test_mwire_switch_actuator.py  test_rain_sensor.py  test_real_base.py  test_room_temperature_controller.py  test_room_temperature_controller_master_without_fan.py  test_smoke_detector.py  test_switch.py  test_switch_actuator.py  test_switch_sensor.py  test_temperature_sensor.py  test_trigger.py  test_virtual_base.py  test_virtual_brightness_sensor.py  test_virtual_energy_battery.py  test_virtual_energy_inverter.py  test_virtual_energy_two_way_meter.py  test_virtual_rain_sensor.py  test_virtual_room_temperature_controller.py  (+7 more)
