[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abbfreeathome"]

[project]
name = "local-abbfreeathome"
version = "0.0.5"
authors = [
  { name="Adam Kingsley", email="adam@kingsley.io" },
]
description = "A python package designed to interact with the ABB (Busch Jaeger) Free@Home System over the Local API"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kingsleyadam/local-abbfreeathome"
Issues = "https://github.com/kingsleyadam/local-abbfreeathome/issues"